--- a/TweetFilter/TweetFilter.vcxproj
+++ b/TweetFilter/TweetFilter.vcxproj
@@ -127,12 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Constants.h" />
     <ClCompile Include="TweetSet.cpp" />
     <ClCompile Include="TweetFilter.cpp" />
     <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="resource.h" />
     <ClInclude Include="TweetSet.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
